musicapp-helm/grafana-chart/templates/service.yaml
#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  selector:
    app: grafana
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: 3000
